# league-caddie

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1be05745ead6_add_invite_code_is_public_member_status.py  40a2d71cc045_merge_heads.py  4f5a8d68595c_widen_stripe_id_columns_to_255.py  5b6c7d8e9f0a_add_stripe_webhook_failures.py  6ae0425f23c9_expand_golfer_country_to_100.py  99fbdae03d30_initial_schema.py  a1b2c3d4e5f6_add_playoff_tables.py  a3f9c2b1d8e5_remove_slug_from_leagues.py  b721c01b567f_add_league_tournaments.py  b7d4e1f2a9c3_add_team_event_fields.py  c4e8a2f1b9d6_rename_admin_role_to_manager.py  c7e2a1f9b4d3_add_thru_started_on_back_to_rounds.py  c9d3f2a8e5b1_add_is_tied_to_tournament_entries.py  d2e5f8a3c1b7_add_league_tournament_multiplier.py  d4f6a2e8b1c9_add_is_playoff_to_league_tournaments.py  e3f7a1c2d9b8_add_tournament_entry_round_times.py  e5f1a9b2c3d4_drop_is_playoff_from_league_tournaments.py  f1a4b7c9e2d3_replace_round_times_with_round_data.py  f2b3c4d5e6a7_one_active_season_per_league.py  g3h5i7j9k1l2_remove_league_description.py  h4i6j8k0l2m3_add_last_synced_at_to_tournaments.py  i5j7k9l1m3n5_add_password_reset_tokens.py  j6k8l0m2n4o6_add_user_auth_check_constraint.py  k7l9m1n3o5p7_users_email_case_insensitive_unique.py  l8m0n2o4p6q8_add_pick_reminders.py  m9n1o3p5q7r9_add_accepting_requests_to_leagues.py  n0o2p4q6r8s0_add_stripe_tables.py  o1p3q5r7s9t1_preserve_financial_records_on_league_deletion.py  p2q4r6s8t0u2_add_auto_accept_requests.py  q3r5s7t9u1v3_add_retry_count_to_webhook_failures.py  r4s6t8u0v2w4_add_standings_cache_to_seasons.py
backend/app/: __init__.py  config.py  dependencies.py  limiter.py  main.py  scraper_main.py  worker_main.py
backend/app/models/: __init__.py  deleted_league.py  golfer.py  league.py  league_purchase.py  league_tournament.py  pick.py  pick_reminder.py  playoff.py  season.py  tournament.py  user.py
backend/app/routers/: admin.py  auth.py  golfers.py  leagues.py  picks.py  playoff.py  standings.py  stripe_router.py  tournaments.py  users.py
backend/app/schemas/: __init__.py  auth.py  league.py  pick.py  playoff.py  standings.py  stripe_schemas.py  tournament.py  user.py
backend/app/services/: auth.py  email.py  pick_reminders.py  picks.py  playoff.py  scheduler.py  scoring.py  scraper.py  sqs.py
backend/localstack-init/: create-queues.sh
backend/scripts/: seed_playoff.py
backend/tests/: conftest.py  test_accepting_requests.py  test_admin.py  test_app.py  test_auth.py  test_auto_accept.py  test_email.py  test_golfers.py  test_google_auth.py  test_league_ordering_and_caps.py  test_leagues.py  test_password_reset.py  test_pick_reminders.py  test_picks.py  test_picks_extended.py  test_picks_service.py  test_playoff_api.py  test_playoff_service.py  test_scoring.py  test_scraper.py  test_sqs.py  test_standings.py  test_stripe.py  test_tournaments.py  test_tournaments_extended.py  test_users.py  test_webhook_retry.py  test_worker_main.py
docs/: AWS.md  Email.md  PLAN.md  SQS.md  (+4 more)
fantasy-golf-backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
fantasy-golf-backend/alembic/versions/: 1be05745ead6_add_invite_code_is_public_member_status.py  40a2d71cc045_merge_heads.py  a1b2c3d4e5f6_add_playoff_tables.py  a3f9c2b1d8e5_remove_slug_from_leagues.py  b7d4e1f2a9c3_add_team_event_fields.py  c7e2a1f9b4d3_add_thru_started_on_back_to_rounds.py  c9d3f2a8e5b1_add_is_tied_to_tournament_entries.py  e5f1a9b2c3d4_drop_is_playoff_from_league_tournaments.py  f1a4b7c9e2d3_replace_round_times_with_round_data.py  i5j7k9l1m3n5_add_password_reset_tokens.py  k7l9m1n3o5p7_users_email_case_insensitive_unique.py
fantasy-golf-backend/app/: config.py  database.py  dependencies.py  limiter.py  main.py  worker_main.py
fantasy-golf-backend/app/models/: __init__.py  base.py  golfer.py  league.py  password_reset_token.py  pick_reminder.py  playoff.py  season.py  user.py
fantasy-golf-backend/app/routers/: golfers.py  leagues.py  standings.py  tournaments.py  users.py
fantasy-golf-backend/app/schemas/: auth.py  golfer.py  league.py  pick.py  tournament.py  user.py
fantasy-golf-backend/app/services/: auth.py  picks.py  scraper.py
fantasy-golf-backend/scripts/: seed.py  seed_playoff.py
fantasy-golf-backend/tests/: conftest.py  test_auth.py  test_scraper.py
(+154 files in other folders)
