[project]
name = "backend"
version = "0.1.0"
description = "League Caddie Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.5.0",
    "google-auth>=2.35.0",
    "requests>=2.32.0",
    "slowapi>=0.1.9",
    "boto3>=1.34.0",
    "email-validator>=2.0.0",
    "stripe>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# SQL strings in migration files routinely exceed the line limit and can't be wrapped.
"alembic/versions/*.py" = ["E501"]
# Forward references to League and Tournament use string annotations to avoid circular
# imports; the type: ignore comments on those lines already suppress mypy's equivalent warning.
"app/models/league_tournament.py" = ["F821"]
# HTML email templates contain long string literals that cannot be wrapped.
"app/services/email.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --cov is intentionally absent from addopts — bare `pytest` / `make test` is fast.
# Use `make cov` or pass --cov explicitly for coverage runs (CI, pre-merge).
addopts = "-n auto"

[tool.coverage.run]
source = ["app"]
omit = [
    # ESPN API scraper — 1800+ lines of HTTP calls; requires live ESPN API mocking
    "app/services/scraper.py",
    # Scraper container entrypoint — just calls start_scheduler(), no logic
    "app/scraper_main.py",
    # APScheduler job registration — schedules jobs that run in prod; not unit-testable
    "app/services/scheduler.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
